--- a/index.html
+++ b/index.html
@@ -18,8 +18,42 @@
 
             <label id="number-label" for="number">Age</label>
             <input id="number" type="number" class="input" name="number" min="5" max="17" placeholder="Age" required>
-            
-        </form>
+            <label id="dropdown-label" for="dropdown">Which is your grade?</label>
+            <select name="dropdown" id="dropdown">
+             <option value="first-grade">first grade</option>
+             <option value="second-grade">second grade</option>
+             <option value="third-grade">third grade</option>
+             <option value="fourth-grade">fourth grade</option>
+             <option value="fith-grade">fith grade</option>
+             <option value="sixth-grade">sixth grade</option>
+            </select>
+            <p>How safe do you think is the School</p>
+            <label id="radio-label1"for="radio1">
+                <input type="radio" id="radio1" name="radio" value="1" class="radio">Very Safe</input></label>
+                <label id="radio-label2"for="radio2">
+                    <input type="radio" id="radio2" name="radio" value="2" class="radio"> Safe</input></label>
+                    <label id="radio-label3"for="radio2">
+                        <input type="radio" id="radio2" name="radio" value="3" class="radio">Somehow safe</input></label>
+                        <label id="radio-label4"for="radio4">
+                            <input type="radio" id="radio4" name="radio" value="4" class="radio">Somehow unsafe</input></label>
+                            <label id="radio-label5"for="radio5">
+                                <input type="radio" id="radio5" name="radio" value="5" class="radio">Unsafe</input></label>
+                                <label id="radio-label6"for="radio6">
+                                    <input type="radio" id="radio6" name="radio" value="6" class="radio">Very Unsafe</input></label>
+                 <p>Security measures you will like to implement</p>  
+                 <label for="check1" id="checkbox-label">
+                     <input type="checkbox" id="check1" value="1" class="checkbox" name="checkbox">Security guard</input>
+                 </label>
+                 <label for="check2" id="checkbox-label2">
+                    <input type="checkbox" id="check2" value="2" class="checkbox" name="checkbox">Installing cctv cameras</input>
+                </label> <label for="check3" id="checkbox-label3">
+                    <input type="checkbox" id="check3" value="3" class="checkbox" name="checkbox">checking the contents in the backpacks</input>
+                </label> <label for="check4" id="checkbox-label4">
+                    <input type="checkbox" id="check4" value="4" class="checkbox" name="checkbox">Monthly review meeting with parents</input>
+                </label> <label for="check5" id="checkbox-label5">
+                    <input type="checkbox" id="check5" value="5" class="checkbox" name="checkbox">Drug test for school workers(teachers included)</input>
+                </label>                  
+                </form>
     </div>
     </body>
 </html>
