few changes in css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
              <option value="fith-grade">fith grade</option>
              <option value="sixth-grade">sixth grade</option>
             </select>
-            <p>How safe do you think is the School</p>
+            <p class="black">How safe do you think is the School</p>
             <label id="radio-label1"for="radio1">
                 <input type="radio" id="radio1" name="radio" value="1" class="radio">Very Safe</input></label>
                 <label id="radio-label2"for="radio2">
@@ -41,7 +41,7 @@
                                 <input type="radio" id="radio5" name="radio" value="5" class="radio">Unsafe</input></label>
                                 <label id="radio-label6"for="radio6">
                                     <input type="radio" id="radio6" name="radio" value="6" class="radio">Very Unsafe</input></label>
-                 <p>Security measures you will like to implement</p>  
+                 <p class="black">Security measures you will like to implement</p>  
                  <label for="check1" id="checkbox-label">
                      <input type="checkbox" id="check1" value="1" class="checkbox" name="checkbox">Security guard</input>
                  </label>
@@ -55,7 +55,7 @@
                     <input type="checkbox" id="check5" value="5" class="checkbox" name="checkbox">Drug test for school workers(teachers included)</input>
                 </label>
                 
-                <p>Additional suggestions</p>
+                <p class="black">Additional suggestions</p>
                 <label id="textarea-label" for="textarea">
                     <textarea id="textarea" name="textarea" rows="5" cols="50" placeholder="Enter your comments"></textarea>
                 </label>
