--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
+        <title>Survey Form</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width. initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
